@@ -1,3 +1,6 @@
+2011-11-07 Markus Enzenberger
+	* Update German translation.
+
 2010-12-22 Graeme Gott <graeme@gottcode.org>
 	* Add changing the program language.
 	* Add rotating pieces with any mouse button.
